# Latte-Dock

./: CMakeLists.txt
app/: CMakeLists.txt  dockcorona.cpp  dockcorona.h
liblattedock/: CMakeLists.txt  plasmoidbackend.cpp  plasmoidbackend.h  worker.cpp  worker.h
plasmoid/contents/ui/: TaskDelegate.qml  TaskIconItem.qml  main.qml
